src/main/java/semantic/symbolTable/test/failing/inheritPrimitiveType.ru
/? InvalidInheritanceException
struct A:Int{}

/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 10 | No se puede heredar de tipo: Int |